setup cloudinary, added some styles to index page, added tour page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+.shelf-effect {
+  background-color: #33291F;
+}
+
+.white { color: white !important; }
+
+.larger-padding {
+  padding: 30px;
+  padding-right: 100px;
+  padding-left: 100px;
+}
