--- a/app/views/layouts/partials/_footer.html.haml
+++ b/app/views/layouts/partials/_footer.html.haml
@@ -1,19 +1,25 @@
 %hr
 .container
   .row
-    .col-md-3.text-center
-      %p 1
-      %p 2
-      %p 3
-    .col-md-3.text-center
-      %p 1
-      %p 2
-      %p 3
-    .col-md-3.text-center
-      %p 1
-      %p 2
-      %p 3
-    .col-md-3.text-center
-      %p 1
-      %p 2
-      %p 3
+    .col-md-4.text-left
+      %p
+        %a{href: '/' } Idol Books
+      %p
+        %a{href: '/' } About Us
+      %p
+        %a{href: '/' } How It works?
+    .col-md-4.text-left
+      %p
+        %a{href: '/' } News
+      %p
+        %a{href: '/' } Press
+      %p
+        %a{href: '/' } Terms Of Use
+    .col-md-4.text-left
+      %p
+        %a{href: '/' } Privacy Policy
+      %p
+        %a{href: '/' } Contact Us
+      %p
+        %a{href: '/' } Terms And Conditions
+      
