--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,3 +1,4 @@
-= render :partial => 'carousel'
-= render :partial => 'features'
-= render :partial => 'testimonials'
+= render :partial => 'static_pages/partials/register'
+/= render :partial => 'partials/carousel'
+= render :partial => 'static_pages/partials/features'
+= render :partial => 'static_pages/partials/testimonials'
