--- a/app/views/static_pages/tour.html.haml
+++ b/app/views/static_pages/tour.html.haml
@@ -1,2 +1,27 @@
-%h2 Tour
+.container
+  %h1.text-right Enlighten your brigher future
+  .row
+    
+    .col-md-4.col-sm-6.col-xs-5
+      %img{ src:"http://placehold.it/320", alt:"..." }
+    .col-md-8.col-sm-6.col-xs-7.text-right
+      %h2 Lorem ipsum I
+      %p Put a bird on it leggings swag Echo Park Godard. PBR sartorial leggings wayfarers, seitan craft beer wolf. Echo Park brunch Neutra Godard flexitarian, post-ironic typewriter ethical cred farm-to-table hoodie Brooklyn chillwave slow-carb. Single-origin coffee roof party XOXO bespoke Helvetica Neutra 90's.
 
+  %hr
+
+  .row
+    .col-md-8.col-sm-6.col-xs-7 
+      %h2 Lorem ipsum I
+      %p Put a bird on it leggings swag Echo Park Godard. PBR sartorial leggings wayfarers, seitan craft beer wolf. Echo Park brunch Neutra Godard flexitarian, post-ironic typewriter ethical cred farm-to-table hoodie Brooklyn chillwave slow-carb. Single-origin coffee roof party XOXO bespoke Helvetica Neutra 90's
+    .col-md-4.col-sm-6.col-xs-5.text-right
+      %img{ src:"http://placehold.it/320", alt:"..." }
+
+  %hr
+
+  .row
+    .col-md-4.col-sm-6.col-xs-5
+      %img{ src:"http://placehold.it/320", alt:"..." }
+    .col-md-8.col-sm-6.col-xs-7.text-right
+      %h2 Lorem ipsum I
+      %p Put a bird on it leggings swag Echo Park Godard. PBR sartorial leggings wayfarers, seitan craft beer wolf. Echo Park brunch Neutra Godard flexitarian, post-ironic typewriter ethical cred farm-to-table hoodie Brooklyn chillwave slow-carb. Single-origin coffee roof party XOXO bespoke Helvetica Neutra 90's
