--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the static_pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.hero-image {
+  height: 500px;
+  background-image: cloudinary-url('http://res.cloudinary.com/danielmyasnikov/image/upload/v1412382506/billie-piper-reading-book.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow:         inset 0 0 10px #000000;
+}
+
+.hero-caption {
+  color: white;
+}
+.hero-header {
+  color: white;
+  padding-top: 10%;
+}
+
+.feature {
+  padding-top: 15px;
+  border-radius: 15px 15px 15px 15px;
+  -moz-border-radius: 15px 15px 15px 15px;
+  -webkit-border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px 0px 1px 0px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,1);
+  -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,1);
+}
+
+.btn { width: 100%}
