--- a/app/views/layouts/partials/_navigation.html.haml
+++ b/app/views/layouts/partials/_navigation.html.haml
@@ -1,11 +1,11 @@
-%nav.navbar-default{ role: "navigation" }
+%nav.navbar-default.shelf-effect.larger-padding{ role: "navigation" }
   .container-fluid
     .navbar-header
       %button.navbar-toggle.collapsed{ type:"button", 'data-toggle' => "collapse", 'data-target' => "#bs-example-navbar-collapse-1" }
         %span.sr-only Toggle navigation
-        %span.icon-bar test1
-        %span.icon-bar test2
-        %span.icon-bar test3
+        %span.icon-bar 
+        %span.icon-bar 
+        %span.icon-bar 
 
       %a.navbar-brand{ href:"#" } Brand
 
@@ -14,11 +14,11 @@
       
       %ul.nav.navbar-nav.navbar-right
         %li
-          %a{ href:"#" } Tour
+          %a.white{ href:"#" } Tour
         %li
-          %a{ href:"#" } Sign up
+          %a.white{ href:"#" } Sign up
         %li
-          %a{ href:"#" } Login
+          %a.white{ href:"#" } Login
         / %li.dropdown
         /   %a.dropdown-toggle{ href:"#", 'data-toggle' => "dropdown" }
         /     Dropdown
