--- a/app/views/static_pages/privacy_policy.html.haml
+++ b/app/views/static_pages/privacy_policy.html.haml
@@ -1,1 +1,55 @@
-privacy_policy.html.haml
+  
+Privacy
+
+<OUR> company invest highly in the security and privacy of your personal data. We understand the importance of enabling you to control the use of your private information. 
+<OUR> never disclose the data of its users to third parties, unless we have received your permission to do so.
+
+
+The following statement consists of a legal agreement, outlining how we will utilize your personal information. This stands true unless you personally grant us permission to use your data otherwise.  Please take the time to read this policy, along with our <OUR> Terms and Conditions and Privacy Policy.
+
+Full Policy Statement
+Receipt of information 
+
+<OUR> company receives your personal information when you use our application. This may includes your full name, your email, address, facebook specific data, including but not limited to friends list, likes, profile pictures.
+
+What we do with this information 
+
+The aforementioned data fields may be utilized by us as a basis for <OUR> company communication.  Furthermore, we may use generic information for statistical reasons, in order to improve the day-to-day service provision.
+
+Legal necessity 
+
+We reserve the right to share your personal data should a third party have a legally justifiable claim for it’s disclosure. 
+
+Conglomerate analysis of user information 
+
+In order to maximize our service provision, general pooled customer information statistics may be shared to our current and prospective business partners, including advertising networks and other third parties. Anonymous statements made by users may also be part of the shared and pooled information. <OUR> is not liable for the conduct of its partners.
+
+User Management of Personal Data 
+
+Data transfer .
+In using the <OUR> service, you are agreeing to your personal data being stored outside of your country of residence. We will not supply your personal data to a third party for commercial exploitation unless explicitly authorised by you; so you can rest assured that we will not sell the your name, personal details or email addresses to any third party without express consent from you. The only circumstances in which we will provide any of your personal data to a third party for non-commercial purposes are those contained in this Privacy Policy.
+
+Data Security Measures
+Storage of user information
+
+<OUR> company store information on firewall-protected secure servers. Although we work hard to protect the security of your information, information transfers over the Internet are never guaranteed 100 per cent. For this reason we are unable to guarantee the security of information that we receive from you, so you therefore transfer it under your own risk.
+
+Retention of user information 
+
+Your information will be deleted from our files once it is no longer needed for us to provide you with the services as described in our Terms and Conditions and within this Privacy Policy and as required by any relevant laws.
+
+Information Processing Location
+
+ Your data is stored and processed on <OUR> servers and Amazon cloud servers.
+
+Privacy Policy Alterations 
+
+<OUR> company retains the right to edit this privacy policy at any time. We recommend that you check online for regularly for any alterations
+Links to third party websites
+The Walnuts website will sometimes feature links to other company websites. We are however not responsible for the content or legal practices of these third party websites.
+
+
+Questions
+
+ Should you have any questions regarding our privacy policy, the operating system within the site, or your interaction with <OUR>, or should you wish to request a copy of the data that we hold on you, you can contact us at: info@lovewalnuts.com
+By subscribing to use our Walnuts Ltd service, you are granted certain consumer rights under the Privacy Protection Act. If you would like to know what personal data we are holding on our database, you have the right to request it. Please contact us at the aforementioned address if you would like to do so.
