devise resetup, documentation update, first page, and sign up pages

--- a/app/views/layouts/partials/_footer.html.haml
+++ b/app/views/layouts/partials/_footer.html.haml
@@ -5,21 +5,19 @@
       %p
         %a{href: '/' } Idol Books
       %p
-        %a{href: '/' } About Us
+        %a{href: '/about_us' } About Us
       %p
-        %a{href: '/' } How It works?
+        %a{href: '/tour' } How It works? Tour
     .col-md-4.text-left
       %p
-        %a{href: '/' } News
+        %a{href: '/news' } News
       %p
-        %a{href: '/' } Press
-      %p
-        %a{href: '/' } Terms Of Use
+        %a{href: '/press' } Press
     .col-md-4.text-left
       %p
-        %a{href: '/' } Privacy Policy
+        %a{href: '/privacy_policy' } Privacy Policy
       %p
-        %a{href: '/' } Contact Us
+        %a{href: '/support' } Support
       %p
-        %a{href: '/' } Terms And Conditions
+        %a{href: '/terms_and_conditions' } Terms And Conditions
       
